# PapdiChat

./: Cargo.toml
entity/: Cargo.toml
entity/src/: group.rs  mod.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20251129_165155_create_users_table.rs  m20251129_170245_groups_table.rs
src/: choose.rs  error.rs  key.rs  lib.rs  main.rs  message.rs  reception.rs  ticket.rs  user.rs
