[package]
name = "ferrischat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
data-encoding = "2.9.0"
futures-lite = "2.6.1"
iroh = "0.95.1"
iroh-gossip = "0.95.0"
rand = "0.9.2"
sea-orm = {version="1.1.19",features = ["sqlx-sqlite", "macros"]}
sea-orm-migration = "1.1.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
migration = { path = "migration" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
entity = { path = "entity" }
inquire = "0.9.1"
magic-crypt = "4.0.1"
argon2 = "0.5.3"
password-hash = {version="0.5.0",features=["rand_core"]}
rand_core = "0.9.3"
